--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
-<!--divinectorweb.com-->
 <head>
     <meta charset="UTF-8">
-    <title>Animated Sidebar Navigation</title>
+    <title>bar menu make by loui-dev</title>
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
